Changes in 1.6 (23.09.2009)

 - Fix MAKE_IRR_ID so it can be used from outside the irr namespace (Micha's patch)

 - Renamed some methods in ISkinnedMesh to match the official Irrlicht naming scheme according to createXXX()

 - Change debug data to draw using lines instead of arrows, which is much faster. Patch by pc0de

 - Fix a bug with FPS camera animator causing stutters. Patch by FuzzYspo0N

 - Fix scrolling controls in CGUITabControl

 - Fix a bug when getting optimal texture size in D3D drivers, by Jetro Lauha (tonic)

 - Added EGDS_TITLEBARTEXT_DISTANCE_X and EGDS_TITLEBARTEXT_DISTANCE_Y to GUI, submitted by FuzzYspo0N

 - Fix for UFT8 filenames displayed in file dialog, patch by MadHyde.

 - Added const method for array::binary_search, potentially slow as it doesn't sort the list!

 - Add support for scaling button images.

 - Irrlicht can now come with multiple device types compiled in, the device to use is selected by SIrrlichtCreationParameters.DeviceType. This defaults to EIDT_BEST which automatically select the best device available starting with native, then X11, SDL and finally the console.

 - Added support for EXP2 fog distribution. This required a change in the setFog parameters where now an enum value instead of the bool linear is given.

 - IFileSystem changes:

   - Renamed the following functions-
      IFileArchive::getArchiveType to getType
      IFileSystem::registerFileArchive to addFileArchive
      IFileSystem::unregisterFileArchive to removeFileArchive
      IFileArchive::openFile to createAndOpenFile

   - New enum, E_FILE_ARCHIVE_TYPE. getType on IArchiveLoader and IFileArchive now both return this.

   - IFileSystem::addFileArchive takes a parameter to specify the archive type rather always using the file extension. IFileSystem::addZipFileArchive, addFolderFileArchive and addPakFileArchive now use this but these functions are now marked as deprecated. Users should now use addFileArchive instead.

   - Added TAR archive loader.
